examples/failing/ImportModule.purs
-- @shouldFailWith UnknownModule
module Main where

import M1
